<?xml version="1.0"?>
<!--
*******************************************************************************
* Copyright (C) 2017-2020 German Aerospace Center (DLR). 
* Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
*
* This program and the accompanying materials are made available under the 
* terms of the Eclipse Public License 2.0 which is available at
* http://www.eclipse.org/legal/epl-2.0.
*
* SPDX-License-Identifier: EPL-2.0 
*
* Contributors: 
*  Daniel Heß
********************************************************************************
-->
<package format="2">
  <name>v2xsim</name>
  <version>0.2.0</version>
  <description>A package for simulation of v2x messages.</description>
  <maintainer email="adore-dev@eclipse.org">Daniel Hess</maintainer>
  <license>EPL-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <build_depend>dsrc_v2_spatem_pdu_descriptions</build_depend>
  <exec_depend>dsrc_v2_spatem_pdu_descriptions</exec_depend>
  <build_depend>dsrc_v2_mapem_pdu_descriptions</build_depend>
  <exec_depend>dsrc_v2_mapem_pdu_descriptions</exec_depend>
  <build_depend>cam_v2_cam_pdu_descriptions</build_depend>
  <exec_depend>cam_v2_cam_pdu_descriptions</exec_depend>
  <build_depend>cpm_v1_19_cpm_pdu_descriptions</build_depend>
  <exec_depend>cpm_v1_19_cpm_pdu_descriptions</exec_depend>
  <build_depend>its_container_v2_its_container</build_depend>
  <exec_depend>its_container_v2_its_container</exec_depend>
  <build_depend>denm_v2_denm_pdu_descriptions</build_depend>
  <exec_depend>denm_v2_denm_pdu_descriptions</exec_depend>
  <depend>mcm_transaid_mcm_transaid</depend>
  <exec_depend>adore_if_ros_msg</exec_depend>

  <!-- <build_depend>strp_fau</build_depend> -->
  <!-- <exec_depend>strp_fau</exec_depend> -->
 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>